--- a/src/CashFlow.Exception/ResourceErrorMessage.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessage.pt-BR.resx
@@ -123,6 +123,9 @@
   <data name="EXPENSES_DATE_LESS_THAN_TODAY" xml:space="preserve">
     <value>Despesas não podem ser para o futuro.</value>
   </data>
+  <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
+    <value>Despesa não encontrada.</value>
+  </data>
   <data name="INVALID_PAYMENT" xml:space="preserve">
     <value>Tipo de pagamento inválido.</value>
   </data>
